moved fetching of patient id to controller layer to make service more reusable