@@ -4,6 +4,7 @@ import org.geekhub.doctorsregistry.domain.appointment.AppointmentService;
 import org.geekhub.doctorsregistry.domain.mapper.AppointmentMapper;
 import org.geekhub.doctorsregistry.domain.patient.PatientService;
 import org.geekhub.doctorsregistry.web.dto.patient.CreatePatientUserDTO;
+import org.geekhub.doctorsregistry.web.security.UsernameExtractor;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Controller;
@@ -16,7 +17,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import springfox.documentation.annotations.ApiIgnore;
 
 import javax.validation.Valid;
-import java.util.stream.Collectors;
 
 @Controller
 @ApiIgnore
@@ -25,15 +25,18 @@ public class PatientUserMVCController {
     private final PatientService patientService;
     private final AppointmentMapper appointmentMapper;
     private final AppointmentService appointmentService;
+    private final UsernameExtractor usernameExtractor;
 
     public PatientUserMVCController(
         PatientService patientService,
         AppointmentMapper appointmentMapper,
-        AppointmentService appointmentService
+        AppointmentService appointmentService,
+        UsernameExtractor usernameExtractor
     ) {
         this.patientService = patientService;
         this.appointmentMapper = appointmentMapper;
         this.appointmentService = appointmentService;
+        this.usernameExtractor = usernameExtractor;
     }
 
     @GetMapping("/patients/me/cabinet")
@@ -41,16 +44,17 @@ public class PatientUserMVCController {
         Integer doctorId = patientService.getIdByEmail(userDetails.getUsername());
         model.addAttribute("archive", patientService.getArchivedAppointments(doctorId).stream()
             .map(appointmentMapper::toDTO)
-            .collect(Collectors.toList()));
+            .toList());
         model.addAttribute("pending", patientService.getPendingAppointments(doctorId).stream()
             .map(appointmentMapper::toDTO)
-            .collect(Collectors.toList()));
+            .toList());
         return "patient-cabinet";
     }
 
     @PostMapping("/patients/me/appointments/delete")
     public String deleteAppointment(@RequestParam("id") Integer appointmentId) {
-        appointmentService.deleteById(appointmentId);
+        Integer currentPatientId = usernameExtractor.getPatientId();
+        appointmentService.deleteById(currentPatientId, appointmentId);
         return "redirect:/patients/me/cabinet";
     }
 
